Fix: Python 3.12 compatibility, SLIM networking, agent IDs, and full system setup
- Downgraded from Python 3.13 to 3.12 for ioa_observe SDK compatibility
- Updated all Dockerfiles to use python:3.12-slim with build-essential
- Fixed SLIM networking (localhost -> slim-lungo:46357)
- Fixed agent card IDs to use underscores matching decorators
- Disabled identity authentication for local development
- Added Weather MCP and Payment MCP with Python 3.12
- Updated LLM provider implementation (removed cnoe-agent-utils)- Added session_start() tracing to all agent executors- Created comprehensive SETUP-GUIDE.md for new deployments- Updated .env.example with correct configurationSystem fully operational: All 3 farms responding successfullycd

--- a/coffeeAGNTCY/coffee_agents/lungo/.env.example
+++ b/coffeeAGNTCY/coffee_agents/lungo/.env.example
@@ -8,8 +8,8 @@ LLM_STREAMING=False
 
 # === OpenAI Settings ===
 LLM_PROVIDER=openai
-OPENAI_API_KEY="your_openai_api_key_here"
-OPENAI_ENDPOINT=https://api.openai.com/v1 # Default OpenAI endpoint without proxy
+OPENAI_API_KEY=your-openai-api-key-here
+OPENAI_ENDPOINT=https://api.openai.com/v1
 OPENAI_MODEL_NAME=gpt-4o
 
 
@@ -19,19 +19,26 @@ OPENAI_MODEL_NAME=gpt-4o
 # AZURE_OPENAI_ENDPOINT=https://your-azure-resource.openai.azure.com/
 # AZURE_OPENAI_DEPLOYMENT=gpt-4-prod
 # AZURE_OPENAI_API_KEY=your_azure_api_key
-# AZURE_OPENAI_API_VERSION=2023-12-01-preview`
+# AZURE_OPENAI_API_VERSION=2023-12-01-preview
+
+# === Anthropic Settings ===
+# Uncomment and fill in to use Anthropic instead of OpenAI
+# LLM_PROVIDER=anthropic
+# ANTHROPIC_API_KEY=your_anthropic_api_key_here
+# ANTHROPIC_MODEL_NAME=claude-3-5-sonnet-20241022
 
 # === Groq Settings ===
 # Uncomment and fill in to use Groq
 # LLM_PROVIDER=groq
-# GROQ_API_KEY="your_groq_api_key_here"
-# GROQ_MODEL_NAME="openai/gpt-oss-120b"
+# GROQ_API_KEY=your_groq_api_key_here
+# GROQ_MODEL_NAME=llama-3.3-70b-versatile
 
-# === Agntcy TBAC Settings (Docker Compose) ===
-# Set these variables to enable Agntcy Identity Auth (TBAC).
-IDENTITY_AUTH_ENABLED="true"
-# For local development, each service uses its own API key variable.
-# In production, each service uses IDENTITY_SERVICE_API_KEY within its environment.
+# === Transport Configuration (Docker Compose) ===
+# For Docker Compose, use the SLIM service name
+TRANSPORT_SERVER_ENDPOINT=http://slim-lungo:46357
+
+# === Identity Authentication (Disabled for local development) ===
+IDENTITY_AUTH_ENABLED=false
 IDENTITY_SERVICE_API_KEY_AUCTION_SUPERVISOR=xxx
 IDENTITY_SERVICE_API_KEY_PAYMENT_MCP=xxx
 IDENTITY_SERVICE_API_KEY_VIETNAM_FARM=xxx
