--- a/coffeeAGNTCY/coffee_agents/lungo/docker/Dockerfile.colombia-farm
+++ b/coffeeAGNTCY/coffee_agents/lungo/docker/Dockerfile.colombia-farm
@@ -1,8 +1,8 @@
-FROM python:3.13.0-slim
+FROM python:3.12-slim
 
-# Install system dependencies, including ping, curl, and wget
+# Install system dependencies, including ping, curl, wget, and build tools for grpcio
 RUN apt-get update && \
-    apt-get install -y --no-install-recommends git curl wget iputils-ping && \
+    apt-get install -y --no-install-recommends git curl wget iputils-ping build-essential && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/*
 
@@ -10,6 +10,7 @@ RUN apt-get update && \
 RUN pip install --no-cache-dir uv && \
     uv venv -q /venv
 ENV PATH="/venv/bin:$PATH"
+ENV UV_PYTHON="python3.12"
 
 # Set PYTHONPATH to include the application directory
 ENV PYTHONPATH="/app"
