--- a/coffeeAGNTCY/coffee_agents/lungo/docker/Dockerfile.exchange
+++ b/coffeeAGNTCY/coffee_agents/lungo/docker/Dockerfile.exchange
@@ -1,5 +1,5 @@
 # `coffeeAGNTCY/coffee_agents/lungo/docker/Dockerfile.exchange`
-FROM python:3.13.0-slim
+FROM python:3.12-slim
 
 ARG BUILD_VERSION=unknown
 ARG BUILD_DATE=unknown
@@ -16,7 +16,7 @@ ARG IMAGE_TAG=unknown
 
 # Install system dependencies, including curl, ping, and wget
 RUN apt-get update && \
-    apt-get install -y --no-install-recommends git curl wget iputils-ping && \
+    apt-get install -y --no-install-recommends git curl wget iputils-ping build-essential && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/*
 
@@ -24,6 +24,7 @@ RUN apt-get update && \
 RUN pip install --no-cache-dir uv && \
     uv venv -q /venv
 ENV PATH="/venv/bin:$PATH"
+ENV UV_PYTHON="python3.12"
 
 # Set PYTHONPATH to include the application directory
 ENV PYTHONPATH="/app"
