--- a/coffeeAGNTCY/coffee_agents/lungo/docker/Dockerfile.weather-mcp
+++ b/coffeeAGNTCY/coffee_agents/lungo/docker/Dockerfile.weather-mcp
@@ -1,7 +1,7 @@
-FROM python:3.13.0-slim
-# Install system dependencies, including curl, ping, and wget
+FROM python:3.12-slim
+# Install system dependencies, including curl, ping, wget, and build tools for grpcio
 RUN apt-get update && \
-    apt-get install -y --no-install-recommends git curl wget iputils-ping && \
+    apt-get install -y --no-install-recommends git curl wget iputils-ping build-essential && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/*
 
@@ -9,6 +9,7 @@ RUN apt-get update && \
 RUN pip install --no-cache-dir uv && \
     uv venv -q /venv
 ENV PATH="/venv/bin:$PATH"
+ENV UV_PYTHON="python3.12"
 
 # Set PYTHONPATH to include the application directory
 ENV PYTHONPATH="/app"
