--- a/coffeeAGNTCY/coffee_agents/lungo/pyproject.toml
+++ b/coffeeAGNTCY/coffee_agents/lungo/pyproject.toml
@@ -3,17 +3,15 @@ name = "lungo"
 version = "0.1.0"
 description = ""
 authors = [{ name = "Shridhar Shah", email = "shridhsh@cisco.com" }]
-requires-python = ">=3.13,<4.0"
+requires-python = ">=3.12,<4.0"
 dependencies = [
     "a2a-sdk==0.3.0",
-    "cnoe-agent-utils==0.3.7",
     "click>=8.1.8",
     "coloredlogs>=15.0.1",
     "dotenv>=0.9.9",
     "fastapi>=0.115.12",
     "httpx>=0.28.1",
     "langchain-anthropic>=0.3.13",
-    "langchain-google-genai>=2.1.4",
     "langchain-openai>=0.3.16",
     "langgraph>=0.4.1",
     "langgraph-supervisor>=0.0.26",
@@ -26,6 +24,11 @@ dependencies = [
     "ioa-observe-sdk==1.0.24",
     "agntcy-identity-service-sdk==0.0.7",
     "agntcy-app-sdk==0.4.4-dev.1",
+    "langfuse>=2.59.0",
+    "opentelemetry-api>=1.30.0",
+    "opentelemetry-sdk>=1.30.0",
+    "opentelemetry-exporter-otlp>=1.30.0",
+    "tiktoken>=0.8.0",
 ]
 
 [project.optional-dependencies]
